Fix Glyphicon Halflings path and import the Bootstrap JS affix and collapse components seperately. Removed rest of Bootstrap JS.

--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,3 +1,7 @@
+/***** CONFIG *****/
+//Path to Bootstrap Fonts (Glyphicon Halflings)
+@icon-font-path: "../bower_components/bootstrap/fonts/";
+
 /***** COLORS *****/
 @white: #fff; .white {color: @white;}
 @black: #000; .black {color: @black;}
